2007-02-05  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Add ipmimonitoring sdr cache directory.

2007-02-05  A Balamurugan  <bala@zresearch.com>

	* ipmi-pef/src/ipmi-pef.h: new file.
	* ipmi-pef/src/Makefile.am: updated.
	* ipmi-pef/src/ipmi-pef-argp.[ch], ipmi-pef/src/ipmi-pef.c:
	removed globals.

2007-02-05  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Add ipmimonitoring docs.
	
2007-02-02  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/ipmi-sel.8.pre.in, ipmi-sensors/ipmi-sensors.8.pre.in:
	Fix typos.

	* ipmi-sel/src/ipmi-sel-argp.c,
	ipmi-sensors/src/ipmi-sensors-argp.c: Fix argp options order.
	
2007-02-01  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/src/ipmi-raw.c (string2bytes, ipmi_raw_stream): Pass
	state_data to string2bytes from ipmi_raw_stream.  Fix memory
	management issue.

2007-01-31  Albert Chu <chu11@llnl.gov>

	* common/src/ipmi-common.c, common/src/ipmi-common.h
	(ipmi_disable_coredump): New function.

	* bmc-config/src/bmc-config.c, bmc-info/src/bmc-info.c,
	ipmi-pef/src/ipmi-pef.c, ipmi-sel/src/ipmi-sel.c,
	ipmi-sensors/src/ipmi-sensors.c (_disable_coredump, main): Use new
	common function.  Remove unnecessary includes.

	* ipmi-locate/src/ipmi-locate.c (main): Cleanup for consistency
	with other tools.

	* Makefile.am: Add COPYING.ipmimonitoring and
	DISCLAIMER.ipmimonitoring to dist.

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring.c
	(ipmi_monitoring_bitmask_string),
	ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_get_digital_sensor_bitmask_type): Fix warnings.

	* ipmi-sel/src/ipmi-sel-wrapper.h, ipmi-sel/src/ipmi-sel-wrapper.c
	(get_sel_record): Cleaned up API.

	* ipmi-sel/src/ipmi-sel-wrapper.h, ipmi-sel/src/ipmi-sel-wrapper.c
	(destroy_sel_record): New function.

	* ipmi-sel/src/ipmi-sel.c (display_sel_records): Use adjusted API.

	* bmc-config/src/: Re-architect to remove globals.
	
2007-01-30  Albert Chu <chu11@llnl.gov>

	* bmc-config/: Continue re-architecture w/ state data.
	