@@ -1,3 +1,8 @@
+2007-02-06  Albert Chu <chu11@llnl.gov>
+
+	* ipmimonitoring/src/libipmisdrcache/Makefile.am: Don't install
+	libipmisdrcache.
+	
 2007-02-05  Albert Chu <chu11@llnl.gov>
 
 	* freeipmi.spec.in: Add ipmimonitoring sdr cache directory.
